   Florian Angeletti)

- #8774: New implementation of Env.make_copy_of_types
  (Alain Frisch, review by Thomas Refis, Leo White and Jacques Garrigue)

- #7924: Use a variant instead of an int in Bad_variance exception
  (Rian Douglas, review by Gabriel Scherer)

- #8890: in -dtimings output, show time spent in C linker clearly
  (Valentin Gatien-Baron)

### Code generation and optimizations:

- #8672: Optimise Switch code generation on booleans.
  (Stephen Dolan, review by Pierre Chambart)

- #2322: Add pseudo-instruction `Ladjust_trap_depth` to replace
  dummy Lpushtrap generated in linearize
  (Greta Yorsh and Vincent Laviron, review by Xavier Leroy)

- #8707: Simplif: more regular treatment of Tupled and Curried functions
  (Gabriel Scherer, review by Leo White and Alain Frisch)

- #8526: Add compile-time option -function-sections in ocamlopt to emit
  each function in a separate named text section on supported targets.
  (Greta Yorsh, review by Pierre Chambart)

- #2321: Eliminate dead ICatch handlers
  (Greta Yorsh, review by Pierre Chambart and Vincent Laviron)

### Runtime system:

- #8619: Ensure Gc.minor_words remains accurate after a GC.
  (Stephen Dolan, Xavier Leroy and David Allsopp,
   review by Xavier Leroy and Gabriel Scherer)

* #8711: The major GC hooks are no longer allowed to interact with the
   OCaml heap.
   (Jacques-Henri Jourdan, review by Damien Doligez)

- #8691, #8897: Allocation functions are now guaranteed not to trigger any
   OCaml callback when called from C.
   (Jacques-Henri Jourdan, review by Stephen Dolan and Gabriel Scherer)

- #8630: Use abort() instead of exit(2) in caml_fatal_error, and add
  the new hook caml_fatal_error_hook.
  (Jacques-Henri Jourdan, review by Xavier Leroy)

- #8713: Introduce a state table in the runtime to contain the global variables
   which must be duplicated for each domain in the multicore runtime.
   (KC Sivaramakrishnan and Stephen Dolan, compatibility header hacking by