@@ -179,3 +179,22 @@ let diff files =
   in
   Sys.force_remove temporary_file;
   result
+
+let promote files ignore_conf =
+  match files.filetype, ignore_conf with
+    | Text, {lines = skip_lines; _} ->
+       let reference = open_out files.reference_filename in
+       let output = open_in files.output_filename in
+       for _ = 1 to skip_lines do
+         try ignore (input_line output) with End_of_file -> ()
+       done;
+       Sys.copy_chan output reference;
+       close_out reference;
+       close_in output
+    | Binary, {bytes = skip_bytes; _} ->
+       let reference = open_out_bin files.reference_filename in
+       let output = open_in_bin files.output_filename in
+       seek_in output skip_bytes;
+       Sys.copy_chan output reference;
+       close_out reference;
+       close_in output
